# mechanicsdsl-embedded

./: CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
cmake/: arm-toolchain.cmake
docker/: Dockerfile  docker-compose.yml
docs/: getting_started.md  hardware_guide.md
examples/arduino_double_pendulum/: README.md  double_pendulum.ino
examples/arduino_pendulum/: README.md  pendulum_realtime.ino
examples/raspberry_pi_double_pendulum/: README.md  double_pendulum_rpi.cpp
examples/raspberrypi_pendulum/: README.md  pendulum_rpi.cpp
scripts/: cross_compile_arm.sh  monitor_serial.py
src/mechanicsdsl_embedded/: __init__.py  _targets.py
tests/: conftest.py  test_eom.py
