[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mechanicsdsl-embedded"
version = "0.1.1"
description = "Embedded deployment tools and examples for MechanicsDSL — Arduino, Raspberry Pi, and ARM"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Noah Parsons", email = "nomapa223@gmail.com" }
]
keywords = [
  "arduino", "raspberry-pi", "embedded", "arm", "physics simulation",
  "MechanicsDSL", "real-time", "robotics"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Software Development :: Embedded Systems",
]
requires-python = ">=3.9"
dependencies = [
  "mechanicsdsl-core",
  "numpy>=1.24",
]

[project.optional-dependencies]
serial = ["pyserial", "matplotlib"]
dev = ["pytest>=7.0", "scipy", "ruff"]

[project.scripts]
mechanicsdsl-embed = "mechanicsdsl_embedded.cli:main"

[project.urls]
Homepage = "https://github.com/MechanicsDSL/mechanicsdsl-embedded"
Repository = "https://github.com/MechanicsDSL/mechanicsdsl-embedded"
DOI = "https://doi.org/10.5281/zenodo.17771040"

[tool.hatch.build.targets.wheel]
packages = ["src/mechanicsdsl_embedded"]

[tool.pytest.ini_options]
testpaths = ["tests"]
